@@ -1,0 +1,11 @@
+Title: Introduce time limit on availability queries
+Level: 2
+Component: reporting
+Version: 1.2.4b1
+Date: 1387203559
+Class: fix
+
+The availability view now imposes an upper limit on the execution of the
+underlying livestatus query. The default is 30 seconds. This can be configured
+in the reporting options. This limit keeps the system usable in situations
+where a query over a long time range would need a very long time to execute.
