@@ -57,6 +57,7 @@
 
     Reporting & Availability:
     * 0018 New option for displaying a legend for the colors used in the timeline...
+    * 0338 FIX: Introduce time limit on availability queries...
 
     Event Console:
     * 0301 Handling messages of special syslog format correctly...
